# jrun-bug

./: .envrc  CMakeLists.txt
src/: main.c
